adding registration by enter key event and solving a bug

--- a/src/app/components/lista-tarefas/lista-tarefas.component.html
+++ b/src/app/components/lista-tarefas/lista-tarefas.component.html
@@ -5,6 +5,7 @@
     type="text"
     placeholder="Adicionar nova tarefa"
     [(ngModel)]="descricaoNovaTarefa"
+    (keyup)="adicionar($event)"
   />
   <button type="button" (click)="adicionar()">
     <i class="fas fa-plus"></i>
