--- a/src/app/components/lista-tarefas/lista-tarefas.component.html
+++ b/src/app/components/lista-tarefas/lista-tarefas.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
   <h1>Lista de Atividades!</h1>
+  <button type="button" id="clean">Clean list</button>
   <div class="action-box">
     <input
     type="text"
